Name: Roguelike0
Synopsis: My first roguelike
Description: My attempt at the roguelike genre.
Copyright: Artur Czajka <arturczajka@gmail.com>
Version: 0.1
Category: Game
License: BSD2
License-File: LICENSE
Cabal-Version: >= 1.6
Build-Type: Simple

Executable rl0
    Main-Is: Main.hs
    GHC-Options: -Wall -Werror
    HS-Source-Dirs: src
    Build-Depends: base

Source-Repository head
    Type: git
    Location: https://github.com/tr00per/roguelike0.git
