name:                roguelike0
version:             0.1.0.0
synopsis:            My attempt at the roguelike genre.
description:         Please see README.md
homepage:            https://github.com/tr00per/roguelike0.git
license:             BSD2
license-file:        LICENSE
author:              Artur Czajka
copyright:           Artur Czajka <arturczajka@gmail.com>
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Actions, Dungeon, Game, Model
  build-depends:       base >= 4.7 && < 5
                     , extensible-effects
                     , matrix
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

executable roguelike0-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Keymap, Render
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , containers
                     , extensible-effects
                     , ncurses
                     , roguelike0
  default-language:    Haskell2010

test-suite roguelike0-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , roguelike0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tr00per/roguelike0.git
